Fixing image on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,3 +8,6 @@ body{
     justify-content: center;
     align-items: center;
 }
+.flex-container > img{
+    max-width: 100%;
+}
